--- a/src/app/components/register/register/register.component.html
+++ b/src/app/components/register/register/register.component.html
@@ -130,9 +130,11 @@
         </div>
       </div>
 
-      <div *ngIf="tokenVisible"> reCAPTCHA Token <br />
-        <p style="color:
-red">{{reCAPTCHAToken}}</p>
+      <div class="col-sm-12 mb-2 mt-3">
+        <re-captcha id="recaptcha" name="recaptcha" #recaptcha="ngModel" [(ngModel)]="token" required [class.is-invalid]="recaptcha.invalid && (recaptcha.dirty || recaptcha.touched)"></re-captcha>
+        <div *ngIf="recaptcha.invalid && (recaptcha.dirty || recaptcha.touched)" class="invalid-feedback">
+          <div *ngIf="recaptcha.errors?.['required']">This field is required.</div>
+        </div>
       </div>
 
       <div class="form-group">
