--- a/src/app/components/register/register/register.component.scss
+++ b/src/app/components/register/register/register.component.scss
@@ -30,3 +30,9 @@ label {
   -webkit-border-radius: 50%;
   border-radius: 50%;
 }
+
+
+re-captcha.is-invalid > div {
+  border: 1px solid #dc3545 !important;
+  border-radius: 0.2rem;
+}
