--- a/src/app/components/register/register/register.component.scss
+++ b/src/app/components/register/register/register.component.scss
@@ -36,3 +36,11 @@ re-captcha.is-invalid > div {
   border: 1px solid #dc3545 !important;
   border-radius: 0.2rem;
 }
+
+.register-page {
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+}
