--- a/src/app/components/login/login/login.component.html
+++ b/src/app/components/login/login/login.component.html
@@ -1,10 +1,7 @@
+<div class="login-page">
 <div class="col-md-12">
   <div class="card card-container">
-    <img
-      id="profile-img"
-      src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
-      class="profile-img-card"
-    />
+    <h2 class="text-center text-white display-6 pb-4">Login</h2>
     <form
       *ngIf="!isLoggedIn"
       name="form"
@@ -24,7 +21,7 @@
           [ngClass]="{ 'is-invalid': f.submitted && username.errors }"
         />
         <div *ngIf="username.errors && f.submitted" class="invalid-feedback">
-          Username is required!
+          Username obbligatorio
         </div>
       </div>
       <div class="form-group">
@@ -40,17 +37,22 @@
           [ngClass]="{ 'is-invalid': f.submitted && password.errors }"
         />
         <div *ngIf="password.errors && f.submitted" class="invalid-feedback">
-          <div *ngIf="password.errors['required']">Password is required</div>
+          <div *ngIf="password.errors['required']">Password obbligatoria</div>
           <div *ngIf="password.errors['minlength']">
-            Password must be at least 6 characters
+            La password deve contere almeno 6 caratteri
           </div>
         </div>
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary btn-block">
-          Login
+      <div class="form-group d-flex justify-content-center mt-3">
+        <button class="btn btn-primary btn-block mt-3 rounded-pill px-5">
+          Accedi
         </button>
       </div>
+
+      <div class="form-group d-flex justify-content-center text-white" id="register">
+        <a class="nav-link me-2 pt-4" routerLink="/register">Non sei registrato? Clicca qui</a>
+      </div>
+
       <div class="form-group">
         <div *ngIf="f.submitted && isLoginFailed" class="alert alert-danger" role="alert">
           Login failed: {{ errorMessage }}
@@ -62,4 +64,5 @@
       Logged in as {{ roles }}.
     </div>
   </div>
+</div>
 </div>
