--- a/src/app/components/register/register/register.component.html
+++ b/src/app/components/register/register/register.component.html
@@ -1,8 +1,8 @@
-<div class="col-md-12">
+<div class="col-md-12 register ">
   <div class="card card-container">
     <img
       id="profile-img"
-      src="//ssl.gstatic.com/accounts/ui/avatar_2x.png"
+      src="https://img.freepik.com/free-vector/flat-design-baby-shark_23-2148484775.jpg?w=826&t=st=1678990906~exp=1678991506~hmac=0f915ffd0f804fc3c7c9d2603f524e8670b210d9646e7ecb0a871976a45f7376"
       class="profile-img-card"
     />
     <form
@@ -28,9 +28,9 @@
         [ngClass]="{ 'is-invalid': f.submitted && nome.errors }"
       />
       <div class="invalid-feedback" *ngIf="nome.errors && f.submitted">
-        <div *ngIf="nome.errors['required']">Username is required</div>
+        <div *ngIf="nome.errors['required']">Nome obbligatorio</div>
         <div *ngIf="nome.errors['minlength']">
-          Nome must be at least 3 characters
+          Il nome deve contenere almeno 3 caratteri
         </div>
         <div *ngIf="nome.errors['maxlength']">
           Username must be at most 20 characters
@@ -53,9 +53,9 @@
         [ngClass]="{ 'is-invalid': f.submitted && cognome.errors }"
       />
       <div class="invalid-feedback" *ngIf="cognome.errors && f.submitted">
-        <div *ngIf="cognome.errors['required']">Cognome is required</div>
+        <div *ngIf="cognome.errors['required']">Cognome obbligatorio</div>
         <div *ngIf="cognome.errors['minlength']">
-          Cognome must be at least 3 characters
+          Cognome deve contenere almeno 3 caratteri
         </div>
         <div *ngIf="cognome.errors['maxlength']">
           Cognome must be at most 20 characters
@@ -78,12 +78,12 @@
           [ngClass]="{ 'is-invalid': f.submitted && username.errors }"
         />
         <div class="invalid-feedback" *ngIf="username.errors && f.submitted">
-          <div *ngIf="username.errors['required']">Username is required</div>
+          <div *ngIf="username.errors['required']">Username obbligatorio</div>
           <div *ngIf="username.errors['minlength']">
-            Username must be at least 3 characters
+            Username deve contenere almeno 3 caratteri
           </div>
           <div *ngIf="username.errors['maxlength']">
-            Username must be at most 20 characters
+            Username può contenere 20 caratteri
           </div>
         </div>
       </div>
@@ -102,9 +102,9 @@
           [ngClass]="{ 'is-invalid': f.submitted && email.errors }"
         />
         <div class="invalid-feedback" *ngIf="email.errors && f.submitted">
-          <div *ngIf="email.errors['required']">Email is required</div>
+          <div *ngIf="email.errors['required']">Email obbligatoria</div>
           <div *ngIf="email.errors['email']">
-            Email must be a valid email address
+            Inserisci un indirizzo email valido
           </div>
         </div>
       </div>
@@ -122,10 +122,11 @@
           #password="ngModel"
           [ngClass]="{ 'is-invalid': f.submitted && password.errors }"
         />
+
         <div class="invalid-feedback" *ngIf="password.errors && f.submitted">
-          <div *ngIf="password.errors['required']">Password is required</div>
+          <div *ngIf="password.errors['required']">Password obbligatoria</div>
           <div *ngIf="password.errors['minlength']">
-            Password must be at least 6 characters
+            La password deve contenere almeno 6 caratteri
           </div>
         </div>
       </div>
@@ -133,21 +134,21 @@
       <div class="col-sm-12 mb-2 mt-3">
         <re-captcha id="recaptcha" name="recaptcha" #recaptcha="ngModel" [(ngModel)]="token" required [class.is-invalid]="recaptcha.invalid && (recaptcha.dirty || recaptcha.touched)"></re-captcha>
         <div *ngIf="recaptcha.invalid && (recaptcha.dirty || recaptcha.touched)" class="invalid-feedback">
-          <div *ngIf="recaptcha.errors?.['required']">This field is required.</div>
+          <div *ngIf="recaptcha.errors?.['required']">Questo campo è obbligatorio.</div>
         </div>
       </div>
 
-      <div class="form-group">
-        <button class="btn btn-primary btn-block">Sign Up</button>
+      <div class="form-group d-flex justify-content-center mt-3">
+        <button class="btn btn-primary btn-block rounded-pill px-4">Registrati</button>
       </div>
 
       <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
-        Signup failed!<br />{{ errorMessage }}
+       Registrazione fallita!<br />{{ errorMessage }}
       </div>
     </form>
 
     <div class="alert alert-success" *ngIf="isSuccessful">
-      Your registration is successful!
+      Registrazione avvenuta con successo!
     </div>
   </div>
 </div>
