--- a/src/app/components/login/login/login.component.html
+++ b/src/app/components/login/login/login.component.html
@@ -14,6 +14,7 @@
         <input
           type="text"
           class="form-control"
+          autocomplete="off"
           name="username"
           [(ngModel)]="form.username"
           required
@@ -29,6 +30,7 @@
         <input
           type="password"
           class="form-control"
+          autocomplete="off"
           name="password"
           [(ngModel)]="form.password"
           required
