--- a/src/app/components/navbar/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar/navbar.component.html
@@ -1,14 +1,14 @@
-<nav class="navbar  navbar-expand bg-dark">
+<nav class="navbar  navbar-expand bg-dark fixed-top">
   <div class="container-fluid">
 
-      <a class="navbar-brand" href="/home">
+      <a class="navbar-brand" href="">
         <img src="../../../../assets/img/120px-Acquario_di_Genova.svg.png" alt="Bootstrap" width="45" height="35">
       </a>
 
 
       <ul class="navbar-nav me-auto mb-lg-0">
         <li class="nav-item ">
-          <a href="/home" class="nav-link text-white" routerLink="home">Home</a>
+          <a href="" class="nav-link text-white" routerLink="">Home</a>
         </li>
       </ul>
       <ul class="navbar-nav ml-auto" *ngIf="!isLoggedIn">
@@ -18,7 +18,7 @@
       </ul>
       <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
         <li class="nav-item  pt-2 pe-3">
-          <a class="nav-link text-white" routerLink="profile">Ciao, {{ username }}</a>
+          <a class="nav-link text-white nome" routerLink="profile">Ciao, {{ username }}</a>
         </li>
         <li class="nav-item pt-2">
           <a class="nav-link btn btn-primary mb-2 btn-tertiary rounded-pill px-3 me-2 text-white" (click)="logout()" routerLink="/home">Logout</a>
