--- a/src/app/components/navbar/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar/navbar.component.html
@@ -21,7 +21,7 @@
           <a class="nav-link text-white nome" routerLink="profile">Ciao, {{ username }}</a>
         </li>
         <li class="nav-item pt-2">
-          <a class="nav-link btn btn-primary mb-2 btn-tertiary rounded-pill px-3 me-2 text-white" (click)="logout()" routerLink="/home">Logout</a>
+          <a class="nav-link btn btn-primary mb-2 btn-tertiary rounded-pill px-3 me-2 text-white" (click)="logout()" routerLink="/">Logout</a>
         </li>
       </ul>
 
