--- a/src/app/components/login/login/login.component.html
+++ b/src/app/components/login/login/login.component.html
@@ -46,7 +46,7 @@
         </div>
       </div>
       <div class="form-group d-flex justify-content-center mt-3">
-        <button class="btn btn-primary btn-block mt-3 rounded-pill px-5">
+        <button class="btn btn-primary btn-block mt-3 rounded-pill px-5" routerLink="/tour">
           Accedi
         </button>
       </div>
@@ -55,16 +55,18 @@
         <a class="nav-link me-2 pt-4" routerLink="/register">Non sei registrato? Clicca qui</a>
       </div>
 
+      <div class="form-group d-flex justify-content-center text-white" id="indietro">
+        <a class="nav-link me-2 pt-4" routerLink="/"><i class="bi bi-arrow-left-circle"></i></a>
+      </div>
+
       <div class="form-group">
-        <div *ngIf="f.submitted && isLoginFailed" class="alert alert-danger" role="alert">
-          Login failed: {{ errorMessage }}
+        <div *ngIf="f.submitted && isLoginFailed" class="alert alert-danger" role="alert" id="alert">
+          Login fallito: {{ errorMessage }}
         </div>
       </div>
     </form>
 
-    <div class="alert alert-success" *ngIf="isLoggedIn">
-      Logged in as {{ roles }}.
-    </div>
+
   </div>
 </div>
 </div>
