--- a/src/app/components/register/register/register.component.scss
+++ b/src/app/components/register/register/register.component.scss
@@ -1,18 +1,33 @@
+
+h2{
+  font-weight: 500;
+}
 label {
   display: block;
-  margin-top: 10px;
+  margin-top: 20px;
+  color: white;
+  font-weight: 500;
+
+
 }
 
 .card-container.card {
-  max-width: 400px !important;
+  width: 550px !important;
   padding: 40px 40px;
+  border-radius: 20px;
+  background: rgba(123, 123, 123, 0.120)!important;
+  backdrop-filter: blur(25px);
+  border: 1px solid white;
+
+
 }
 
 .card {
   background-color: #f7f7f7;
   padding: 20px 25px 30px;
-  margin: 0 auto 25px;
-  margin-top: 50px;
+  /*margin: 0 auto 25px;
+  margin-top: 50px;*/
+  margin: 0 auto;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
@@ -21,26 +36,109 @@ label {
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
 }
 
-.profile-img-card {
-  width: 96px;
-  height: 96px;
-  margin: 0 auto 10px;
-  display: block;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
+
+#register:hover{
+font-weight: bolder;
+transition: 0.2s;
+}
+
+.form-control{
+  background-color: rgba(255, 255, 255, 0)!important;
+  color: white;
+  border-radius: 50px;
 }
 
 
-re-captcha.is-invalid > div {
-  border: 1px solid #dc3545 !important;
-  border-radius: 0.2rem;
-}
 
-.register-page {
-
+.register {
+  min-height: 100vh;
+  padding-top: 30px;
+  padding-bottom: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
+  background: url('../../../../assets/img/sfondo2.jpg')no-repeat;
+  background-position: center;
+  background-size: cover;
 
+}
+
+.btn{
+background-color: transparent;
+border: 1px solid white;
+font-weight: 600;
+}
+
+input.form-control {
+  border: none;
+  border-bottom: 1px solid white;
+  border-radius: 0;
+  box-shadow: none!important;
+
+}
+
+.form-control:focus{
+  border-color: orangered;
+}
+
+.form-control.is-invalid{
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 12 12' width='12' height='12' fill='none' stroke='%23ff4500'%3e%3ccircle cx='6' cy='6' r='4.5'/%3e%3cpath stroke-linejoin='round' d='M5.8 3.6h.4L6 6.5z'/%3e%3ccircle cx='6' cy='8.2' r='.6' fill='%23ff4500' stroke='none'/%3e%3c/svg%3e");
+}
+
+input:-webkit-autofill, input:-webkit-autofill:focus, input:-webkit-autofill:hover {
+  -webkit-box-shadow: none !important;
+  background-color: transparent !important;
+}
+
+.invalid-feedback {
+background-color: #ffffff75;
+border-radius: 5px;
+color: orangered;
+font-size: 16px;
+font-weight: 600;
+padding: 5px ;
+}
+
+#alert{
+  margin-top: 20px;
+}
+
+.bi{
+  font-size: 32px;
+}
+
+.bi:hover{
+  color: orangered;
+  transition: 0.2s;
+
+}
+
+#recaptcha{
+  display: flex;
+  align-items: center;
+}
+
+input:focus, input:valid { appearance:none!important; }
+
+
+
+/*.form-group input[autocomplete="off"] {
+  background-color: transparent!important;
+}*/
+
+.form-control{
+  background-color: trasparent!important;
+  color: white;
+  border-radius: 50px;
+}
+
+@media screen and (max-width: 575px) {
+  #nomecognomne {
+    flex-direction: column;
+   }
+
+   .register{
+    padding-right: 20px!important;
+    padding-left: 20px!important;
+   }
 }
