--- a/src/app/components/register/register/register.component.html
+++ b/src/app/components/register/register/register.component.html
@@ -15,8 +15,8 @@
       <input
         type="text"
         class="form-control"
-        autocomplete="off"
-        name="nome"
+        autocomplete="new-sujhsujhnsj"
+        name="shbshbbj"
         [(ngModel)]="form.nome"
         required
         minlength="3"
@@ -41,8 +41,8 @@
       <input
         type="text"
         class="form-control"
-        autocomplete="off"
-        name="cognome"
+        autocomplete="new-jbhsbdhj"
+        name="gvhshsh"
         [(ngModel)]="form.cognome"
         required
         minlength="3"
@@ -68,8 +68,8 @@
         <input
           type="text"
           class="form-control"
-          autocomplete="off"
-          name="username"
+          autocomplete="new-jheduheu"
+          name="dhbhdbd"
           [(ngModel)]="form.username"
           required
           minlength="3"
@@ -94,8 +94,8 @@
         <input
           type="email"
           class="form-control"
-          autocomplete="off"
-          name="email"
+          autocomplete="new-llllll"
+          name="shhjshbh"
           [(ngModel)]="form.email"
           required
           email
@@ -114,10 +114,10 @@
       <div class="form-group">
         <label for="password">Password</label>
         <input
-          type="password"
+          type="text"
           class="form-control"
-          autocomplete="off"
-          name="password"
+          autocomplete="new-uheuhuue"
+          name="edjjdednjn"
           [(ngModel)]="form.password"
           required
           minlength="6"
