--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,20 +1,51 @@
-
 <app-navbar [isLoggedIn]="isLoggedIn"></app-navbar>
+
+
+
+<div class="banner-image mt-5">
+  <div class="container pb-5">
+    <div class="row py-5 align-items-center">
+      <div class="col-lg-6">
+        <h1 class="display-4 mb-5 pt-5  text-white">Festeggiamo insieme 30 anni di Acquario</h1>
+
+
+        <p class="h5 aa mb-5  text-white">
+        Un eccezionale <span style="color:orangered;font-weight:bold">Tour virtuale interattivo</span> tra le vasche più iconiche dell'Acquario di Genova per celebrare il trentesimo anniversario e ammirare la sua grande biodiversità!  </p>
+
+        <div class="d-flex">
+          <a href=""
+            class="btn btn-primary text-center text-white me-2 rounded-pill px-4 py-2 fw-bold tuffo">Tuffati</a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+
+
+
+
+
+
 
 
 <div class="px-4 pt-5 my-5 text-center ">
   <h1 class="display-4 fw-bold">Home Page</h1>
   <div class="col-lg-6 mx-auto">
-    <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+    <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
+      popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive
+      prebuilt components, and powerful JavaScript plugins.</p>
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-      <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3 rounded-pill px-4" routerLink="/tour">Vai al tour virtuale</button>
+      <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3 rounded-pill px-4" routerLink="/tour">Vai al tour
+        virtuale</button>
 
 
     </div>
   </div>
   <div class="overflow-hidden" style="max-height: 30vh;">
     <div class="container px-5">
-      <img src="https://www.acquariodigenova.it/wp/wp-content/uploads/2022/11/Fascia-img-mondo-1600x6850.jpg" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+      <img src="https://www.acquariodigenova.it/wp/wp-content/uploads/2022/11/Fascia-img-mondo-1600x6850.jpg"
+        class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
     </div>
   </div>
 </div>
