--- a/src/app/components/login/login/login.component.scss
+++ b/src/app/components/login/login/login.component.scss
@@ -46,7 +46,8 @@ label {
 
 #register:hover{
 font-weight: bolder;
-transition: 0.2s;
+transition: 0.1s;
+color: orangered!important;
 }
 
 .form-control{
@@ -77,6 +78,11 @@ border: 1px solid white;
 font-weight: 600;
 }
 
+.btn:hover{
+  background-color: orangered;
+  border-color: orangered ;
+}
+
 input.form-control {
   border: none;
   border-bottom: 1px solid white;
@@ -100,6 +106,21 @@ input:-webkit-autofill:hover {
     background-color: rgba(255, 255, 255, 0) !important;
 }
 
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus
+input:-webkit-autofill,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+  -webkit-text-fill-color: #fff !important;
+  -webkit-box-shadow: 0 0 0px 1000px rgba(0, 0, 0, 0) inset !important;
+  transition: background-color 5000s ease-in-out 0s !important;
+}
+
 .invalid-feedback {
 background-color: #ffffff75;
 border-radius: 5px;
@@ -120,6 +141,5 @@ padding: 5px ;
 .bi:hover{
   color: orangered;
   transition: 0.2s;
-
 }
 
