--- a/src/app/components/navbar/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar/navbar.component.scss
@@ -1,3 +1,31 @@
-.nome{
-  cursor:default;
+.navbar{
+  background-color: transparent!important;
+  height: 80px;
 }
+
+.navbar-nav li > a{
+  color: white;
+}
+.navbar-nav li > a:hover{
+  color: #ffffff;
+}
+
+img{
+  margin-top: 10px;
+  max-width: 100%;
+  width: 110px;
+
+}
+
+.navbar-nav li > a:after {
+    content: '';
+    display: block;
+    width: 0;
+    height: 3px;
+    background: orangered;
+    transition: width .3s;
+}
+.navbar-nav li > a:hover::after {
+    width: 100%;
+}
+
