--- a/src/app/components/navbar/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar/navbar.component.html
@@ -1,32 +1,59 @@
-<nav class="navbar  navbar-expand ps-4 pe-4 ">
+<nav class="navbar navbar-expand-md navbar-dark bg-body-tertiary ">
   <div class="container-fluid">
+    <a class="navbar-brand" href="/">
+      <img src="assets/img/logo-acquario-di-genova-negative.png" alt="logo" >
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="offcanvas offcanvas-end bg-dark" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+      <div class="offcanvas-header">
+        <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+      </div>
+      <div class="offcanvas-body">
+        <ul class="navbar-nav flex-grow-1 justify-content-end pe-3">
+          <li class="nav-item">
+            <a class="nav-link text-white nome disabled fw-bold" routerLink="profile" *ngIf="isLoggedIn">
+              Ciao, <span class="text-capitalize">{{ username }}</span>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active fw-bold" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white fw-bold" routerLink="login" *ngIf="!isLoggedIn">Login</a>
+          </li>
 
-      <a class="navbar-brand" href="/">
-        <img src="../../../../assets/img/logo-acquario-di-genova-negative.png" alt="logo" >
-      </a>
+          <li class="nav-item">
+            <a class="nav-link btn-tertiary rounded-pill  text-white fw-bold" routerLink="/tour" *ngIf="isLoggedIn">
+              Tour virtuale
+            </a>
+          </li>
 
+          <li class="nav-item">
+            <a class="nav-link mb-2 btn-tertiary rounded-pill me-2 text-white fw-bold ms-5 logout" (click)="logout()" routerLink="/" *ngIf="isLoggedIn">
+              Logout
+            </a>
+          </li>
+        </ul>
 
-      <ul class="navbar-nav ms-auto mb-lg-0">
-        <li class="nav-item ">
-          <a class="nav-link text-white fw-bold" routerLink="/">Home</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav ml-auto" *ngIf="!isLoggedIn">
-        <li class="nav-item">
-          <a href="/login" class="nav-link text-white fw-bold" routerLink="login">Login</a>
-        </li>
-      </ul>
-      <ul class="navbar-nav ml-auto" *ngIf="isLoggedIn">
-        <li class="nav-item  pt-2 pe-3">
-          <a class="nav-link text-white nome" routerLink="profile">Ciao, {{ username }}</a>
-        </li>
-        <li class="nav-item pt-2">
-          <a class="nav-link btn btn-primary mb-2 btn-tertiary rounded-pill px-3 me-2 text-white" (click)="logout()" routerLink="/">Logout</a>
-        </li>
-      </ul>
-
+      </div>
+    </div>
   </div>
 </nav>
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
