--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -14,7 +14,7 @@
 
         <div class="d-flex">
           <a href=""
-            class="btn btn-primary text-center text-white me-2 rounded-pill px-4 py-2 fw-bold tuffo">Tuffati</a>
+            class="btn btn-primary text-center text-white me-2 rounded-pill px-4 py-2 fw-bold tuffo" routerLink="/tour">Tuffati</a>
         </div>
       </div>
 
@@ -49,3 +49,5 @@
     </div>
   </div>
 </div>
+
+
