--- a/src/app/components/home/home/home.component.scss
+++ b/src/app/components/home/home/home.component.scss
@@ -35,3 +35,17 @@ p{
     font-size: 18px;
   }
 }
+
+@media screen and (min-width: 992px){
+  .banner-image{
+ padding-top: 30px;
+  }
+}
+
+@media screen and (min-width: 1200px){
+  .banner-image{
+ padding-top: 110px!important;
+  }
+}
+
+/*----------------------------------------------------*/
