--- a/src/app/components/navbar/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar/navbar.component.scss
@@ -29,3 +29,41 @@ img{
     width: 100%;
 }
 
+.navbar-nav .nome  > a:after{
+  content: '';
+  display: block;
+  background:none;
+
+}
+
+.navbar{
+  --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgb(255, 255, 255)' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+}
+
+.navbar-toggler {
+  border: 1px solid #e0dddd65;
+}
+
+.navbar-toggler:focus {
+  box-shadow: 0 0 0 0.2rem rgba(200, 200, 200, 0.5);
+}
+
+.btn-close{
+  --bs-btn-close-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23ff4500'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
+
+  --bs-btn-close-opacity: none!important;
+
+  --bs-btn-close-focus-shadow: 0 0 0 0.25rem rgba(252, 73, 19, 0.247);
+}
+
+@media screen and (max-width: 767px){
+
+  .offcanvas-end{
+    background-color: rgba(26, 26, 26, 0.849)!important;
+    backdrop-filter: blur(5px);
+  }
+
+  .logout{
+    margin-left: 0!important;
+  }
+}
