--- a/src/app/components/tour/tour.component.html
+++ b/src/app/components/tour/tour.component.html
@@ -1,9 +1,9 @@
 <app-navbar [isLoggedIn]="isLoggedIn"></app-navbar>
 
-<div class="px-4 pt-5 my-5 text-center ">
-  <h1 class="display-4 fw-bold">Tour page<br>Rotta protetta da guard e login</h1>
+<div class=" text-center bg-dark hero">
+  <h1 class="display-4 fw-bold text-white pt-4">Tour page<br>Rotta protetta da guard e login</h1>
   <div class="col-lg-6 mx-auto">
-    <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+    <p class="lead mb-4 text-white pt-5">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
       <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3 rounded-pill px-4">Primary button</button>
 
