--- a/src/app/components/home/home/home.component.html
+++ b/src/app/components/home/home/home.component.html
@@ -1,20 +1,17 @@
 <app-navbar [isLoggedIn]="isLoggedIn"></app-navbar>
 
-
-
 <div class="banner-image mt-5">
   <div class="container pb-5">
     <div class="row py-5 align-items-center">
       <div class="col-lg-6">
         <h1 class="display-4 mb-5 pt-5  text-white">Festeggiamo insieme 30 anni di Acquario</h1>
-
-
         <p class="h5 aa mb-5  text-white">
-        Un eccezionale <span style="color:orangered;font-weight:bold">Tour virtuale interattivo</span> tra le vasche più iconiche dell'Acquario di Genova per celebrare il trentesimo anniversario e ammirare la sua grande biodiversità!  </p>
-
+          Un eccezionale <span style="color:orangered;font-weight:bold">Tour virtuale interattivo</span> tra le vasche
+          più iconiche dell'Acquario di Genova per celebrare il trentesimo anniversario e ammirare la sua grande
+          biodiversità! </p>
         <div class="d-flex">
-          <a href=""
-            class="btn btn-primary text-center text-white me-2 rounded-pill px-4 py-2 fw-bold tuffo" routerLink="/tour">Tuffati</a>
+          <a href="" class="btn btn-primary text-center text-white me-2 rounded-pill px-4 py-2 fw-bold tuffo"
+            routerLink="/tour">Tuffati</a>
         </div>
       </div>
 
@@ -23,30 +20,193 @@
 </div>
 
 
+<div class="container-fluid descr ">
+  <div class="px-4 pt-5  text-center pb-5">
+    <h3 class="display-6 fw-bold text-white py-3">Il più grande Acquario d'Europa</h3>
+    <div class="col-lg-6 mx-auto">
+      <p class="lead mb-4 pt-3 text-white">L’Acquario di Genova compie 30 anni. Un importante traguardo per la
+        struttura, gestita da Costa Edutainment, che dal 1992 ad oggi, ha accolto oltre 33 milioni di visitatori
+        avvicinandoli al mondo marino e acquatico per consentire loro di conoscerlo, apprezzarne il valore inestimabile,
+        scoprire le principali minacce che ne minano l’esistenza e, attraverso il coinvolgimento diretto in esperienze
+        edutainment, sollecitare un impegno personale per contribuire alla sua salvaguardia.</p>
+    </div>
+  </div>
+
+
+  <div class="container text-center text-white py-5">
+    <div class="row">
+      <div class="col-md py-3">
+        <i class="fa-solid fa-city fa-3x pb-3"></i>
+        <hr>
+        <p class="fw-bolder pt-2">27.000 MQ<br>SUPERFICIE ESPOSITIVA</p>
+      </div>
+      <div class="col-md py-3">
+        <i class="fa-solid fa-fish-fins fa-3x pb-3"></i>
+        <hr>
+        <p class="fw-bolder pt-2">10.000<br>ANIMALI</p>
+      </div>
+      <div class="col-md py-3">
+        <i class="fa-solid fa-leaf fa-3x pb-3"></i>
+        <hr>
+        <p class="fw-bolder pt-2">200<br>SPECIE VEGETALI</p>
+      </div>
+      <div class="col-md py-3">
+        <i class="fa-solid fa-clock fa-3x pb-3"></i>
+        <hr>
+        <p class="fw-bolder pt-2">2/3 ORE<br>DURATA PERCORSO</p>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="container-fluid  pt-4  squalo">
+  <h3 class="display-6 fw-bold text-white  text-center w-75 m-auto pb-5">Vieni a scoprire l’Acquario di Genova e
+    immergiti in un mondo di emozioni.</h3>
+  <div class="row flex-lg align-items-center g-5 pt-5 ps-4">
+    <div class="col-10 col-sm-8 col-lg-6 ">
+      <p class=" text-white pt-5 pb-3 fw-bold h4 pt-5">La baia degli squali</p>
+      <p class="lead text-white ">La grande vasca dedicata ai predatori del mare, che ospita, oltre a diverse specie di
+        squalo provenienti da vari ambienti marini, altri pesci interessanti. In prossimità del fondale, per esempio, si
+        possono vedere due esemplari di pesce sega. Tipici dell’ Oceano Indiano e del Pacifico occidentale, sono
+        facilmente riconoscibili dal lungo rostro dentellato.</p>
+    </div>
+  </div>
+</div>
+
+
+
+<div class="container-fluid  pt-4  pinguino">
+  <div class="row flex-row-reverse align-items-center g-5 pt-5 ps-4">
+    <div class="col-10 col-sm-8 col-lg-6 ">
+      <p class=" text-white pt-5 pb-3 fw-bold h4 pt-5">Il Regno dei Ghiacci</p>
+      <p class="lead text-white ">La suggestiva scenografia con pareti laccate bianco a effetto ghiaccio accompagna i
+        visitatori alla scoperta dell’inospitale continente antartico e delle aree subantartiche. Contrariamente a
+        quanto avviene nelle aree continentali, le acque marine antartiche sono tutt’altro che disabitate; le specie che
+        le abitano hanno sviluppato straordinari adattamenti per sopravvivere in condizioni estreme.</p>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid  pt-4   medusa">
+  <div class="row flex align-items-center g-5 pt-5 ps-4">
+    <div class="col-10 col-sm-8 col-lg-6 ">
+      <p class=" text-white pt-5 pb-3 fw-bold h4 pt-5">La danza delle meduse</p>
+      <p class="lead text-white ">Una sala dove lasciarsi trasportare dal movimento fluttuante delle meduse: nove vasche
+        per scoprire specie provenienti da diversi mari del mondo, e le fasi principali del ciclo vitale di questi
+        organismi antichi e dalla struttura molto semplice. Una colonna sonora dedicata e una particolare illuminazione
+        accompagna i visitatori in questa coinvolgente esperienza.</p>
+    </div>
+  </div>
+</div>
+
+
+<!--------------------------------------------------------------------->
+<div class="container-fluid py-5 story">
+  <h3 class="display-6 fw-bold text-white  text-center w-75 m-auto py-5">Le principali tappe della nostra storia</h3>
+  <div class="container">
+    <div id="carouselExampleAutoplaying" class="carousel slide px-5" data-bs-ride="carousel" data-bs-interval="4000">
+
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://www.acquariodigenova.it/wp/wp-content/uploads/2022/11/2020-01-28_2.jpg" class="d-block w-100" alt="costruzione acquario">
+      <div class="carousel-caption ">
+        <h5 class="pt-2 fw-bold"><i class="fa-solid fa-minus"></i> 1992 <i class="fa-solid fa-minus"></i></h5>
+        <p>È l’anno della costruzione dell’Acquario in occasione di Expo 1992, per il 5° centenario della scoperta del Nuovo Mondo</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.acquariodigenova.it/wp/wp-content/uploads/2022/11/ADG-Animali-Star-Delfino-PH-Merlofotografia-050428-24-1.jpg" class="d-block w-100" alt="delfini">
+      <div class="carousel-caption ">
+        <h5 class="pt-2 fw-bold"><i class="fa-solid fa-minus"></i> 1994 <i class="fa-solid fa-minus"></i></h5>
+        <p>Il 5 Settembre nasce Cleo, prima cucciola di delfino della struttura genovese</p>
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="https://www.acquariodigenova.it/wp/wp-content/uploads/2022/11/MAF_3024.jpg" class="d-block w-100" alt="nave blu">
+      <div class="carousel-caption ">
+        <h5 class="pt-2 fw-bold"><i class="fa-solid fa-minus"></i> 1998 <i class="fa-solid fa-minus"></i></h5>
+        <p>L’Acquario amplia la superficie espositiva inaugurando la Grande Nave Blu, che ospita 19 tra vasche e terrari</p>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <img src="https://www.acquariodigenova.it/wp/wp-content/uploads/2022/11/Acquario-di-Genova-Crociere-Delfini-Metropolitani-attivita%CC%80-gommone-bambini-3-media.jpg" class="d-block w-100" alt="gommone con ricercatori">
+      <div class="carousel-caption ">
+        <h5 class="pt-2 fw-bold"><i class="fa-solid fa-minus"></i> 2001 <i class="fa-solid fa-minus"></i></h5>
+        <p>Prende il via il progetto Delfini Metropolitani, con l’obiettivo di valutare la presenza dei delfini costieri e i loro rapporti con l’uomo</p>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <img src="https://www.acquariodigenova.it/wp/wp-content/uploads/2022/11/Fondazione.jpg" class="d-block w-100" alt="logo fondazione">
+      <div class="carousel-caption ">
+        <h5 class="pt-2 fw-bold"> <i class="fa-solid fa-minus"></i> 2003 <i class="fa-solid fa-minus"></i></h5>
+        <p>Nasce la Fondazione Acquario di Genova ETS per lo sviluppo di attività culturali, educative e di ricerca scientifica per tutela della biodiversità</p>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <img src="https://www.acquariodigenova.it/wp/wp-content/uploads/2022/11/12.05.2018-Acquario-di-Genova-rilascio-Caretta-caretta-da-spiaggia-ph-C.-Corti-19-1.jpg" class="d-block w-100" alt="tartaruga marina">
+      <div class="carousel-caption ">
+        <h5 class="pt-2 fw-bold"><i class="fa-solid fa-minus"></i> 2006 <i class="fa-solid fa-minus"></i></h5>
+        <p>Avviene il primo rilascio in natura di un esemplare di tartaruga Caretta Caretta che coinvolge il pubblico a bordo di un’imbarcazione</p>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <img src="https://www.acquariodigenova.it/wp/wp-content/uploads/2022/11/ADG-Pinguini-PH-Merlofotografia-090901-7940.jpg" class="d-block w-100" alt="pinguini">
+      <div class="carousel-caption ">
+        <h5 class="pt-2 fw-bold"><i class="fa-solid fa-minus"></i> 2008 <i class="fa-solid fa-minus"></i></h5>
+        <p>Inaugurata la vasca subantartica che ospita due specie di pinguino: il pinguino Papua e il pinguino di Magellano</p>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <img src="https://www.acquariodigenova.it/wp/wp-content/uploads/2022/11/ADG-LAMANTINI-ph-merlofotografia-120620-7365.jpg" class="d-block w-100" alt="lamantini">
+      <div class="carousel-caption ">
+        <h5 class="pt-2 fw-bold"><i class="fa-solid fa-minus"></i> 2010 <i class="fa-solid fa-minus"></i></h5>
+        <p>L’Acquario di Genova accoglie i lamantini, unica struttura in Italia e una delle dieci in Europa a ospitare questa specie</p>
+      </div>
+    </div>
+
+    <div class="carousel-item">
+      <img src="https://www.acquariodigenova.it/wp/wp-content/uploads/2022/11/ADG-Pad-Cetacei-ph-merlofotografia-1307226-3847.jpg" class="d-block w-100" alt="padiglione cetacei">
+      <div class="carousel-caption ">
+        <h5 class="pt-2 fw-bold"><i class="fa-solid fa-minus"></i> 2013 <i class="fa-solid fa-minus"></i></h5>
+        <p>Inaugura il Padiglione Cetacei, progettato da Renzo Piano, dedicato ai Cetacei che abitano le acque del Santuario Pelagos</p>
+      </div>
+    </div>
+
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+  </div>
+</div>
 
 
 
 
 
-
-<div class="px-4 pt-5 my-5 text-center ">
-  <h1 class="display-4 fw-bold">Home Page</h1>
+<div class="px-4 pt-5 my-5 text-center border-bottom">
+  <h1 class="display-4 fw-bold text-body-emphasis">Centered screenshot</h1>
   <div class="col-lg-6 mx-auto">
-    <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
-      popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive
-      prebuilt components, and powerful JavaScript plugins.</p>
+    <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-      <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3 rounded-pill px-4" routerLink="/tour">Vai al tour
-        virtuale</button>
-
-
+      <button type="button" class="btn btn-primary btn-lg px-4 me-sm-3">Primary button</button>
+      <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
     </div>
   </div>
   <div class="overflow-hidden" style="max-height: 30vh;">
     <div class="container px-5">
-      <img src="https://www.acquariodigenova.it/wp/wp-content/uploads/2022/11/Fascia-img-mondo-1600x6850.jpg"
-        class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
-    </div>
+
   </div>
 </div>
 
